# Siaod2sem

./: CMakeLists.txt
Task1/: 1_Смольников_А_Б.docx  main.cpp  ~$Смольников_А_Б.docx
Task2/: 2_Смольников_А_Б.docx  bitFile.cpp  bitFile.h  main.cpp  textFile.cpp  textFile.h
Task3/: 3_Смольников_А_Б.docx  binaryGenerator.cpp  binaryGenerator.h  bitFile.cpp  bitFile.h  main.cpp  manipulateBin.h  manipulateBinHash.h  manipulateHash.cpp  manipulateHash.h  manupulateBinHash.cpp
Task4/: 4_Смольников_А_Б.docx  main.cpp  tree.cpp  tree.h
Task5/: 5_Смольников_А_Б.docx  AVLTree.cpp  AVLTree.h  Note.h  binTree.cpp  binTree.h  binfile.cpp  binfile.h  fileGenerator.py  main.cpp
Task6/: 6_Смольников_А_Б.docx  Graph.cpp  Graph.h  graph1.txt  graph12.txt  graphIFMO.txt  main.cpp
Task7/: 7_Смольников_А_Б.docx  Huffman.cpp  Huffman.h  LZ77.cpp  LZ77.h  LZ78.cpp  LZ78.h  ShennonFano.cpp  ShennonFano.h  az100000.h  dispersion.xlsx  main.cpp
Task8/: 8_Смольников_А_Б.docx  main.cpp
