cmake_minimum_required(VERSION 3.23)
project(Siaod2sem)

set(CMAKE_CXX_STANDARD 23)

add_executable(Siaod2sem Task3/main.cpp Task3/manipulateHash.h Task3/manipulateBinHash.h Task3/manipulateHash.cpp Task3/bitFile.h Task3/bitFile.cpp Task3/manupulateBinHash.cpp Task3/binaryGenerator.h Task3/binaryGenerator.cpp)
